tests/purs/failing/ArrayType.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ArrayType.purs:10:7 - 10:8 (line 10, column 7 - line 10, column 8)

  Could not match type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m
  with type
  [33m        [0m
  [33m  Number[0m
  [33m        [0m

while checking that type [33mInt[0m
  is at least as general as type [33mNumber[0m
while checking that expression [33mx[0m
  has type [33mNumber[0m
in value declaration [33mfoo[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

